--- a/.env
+++ b/.env
@@ -15,7 +15,9 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=af77262fad81447fb6d3bf2ce0f2f387
+APP_SECRET=605f1d447919835273a5e7a4afb4d120
+#TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
+#TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -25,8 +27,8 @@ APP_SECRET=af77262fad81447fb6d3bf2ce0f2f387
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
+# 
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL=mysql://root:root@localhost:3306/bankal?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
